--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     <p>
         <a href="readings.html">reading reflections</a></p>
     <p>
-        <img src="image/headshot.png" alt text="ashley" width="300"</p>
+        <a href="chairsinsnow.html">image page</a></p>
     <p>
+        <img src="image/headshot.png" alt text="ashley" width="300"</p>
+    <footer>
         contact: zalezashley96@gmail.com
-    </p>
     </footer>
 </body>
 </html>
