--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <h1>Hello, my name is Ashley Gonzalez.</h1>
     <p>This is the portfolio page for my MEDPL150 site!</p>
     <p><strong>Creative Statement</strong></p>
-    <p> am a Senior History major student with the goal of becoming a Public Programs director. Currently, I am a public library assistant
+    <p>I am a Senior History major student with the goal of becoming a Public Programs director. Currently, I am a public library assistant
     and a teaching assistant for an ESL adult learning program. My favorite form of media are video games,
-    and my genre of choice within it is turn-based role playing games.
+    and my genre of choice is turn-based role playing games.
     I do not have formal experience in media arts aside from a year in multiple roles for my high school yearbook. 
     Through this class, I hope to develop skills for professional roles that increasingly need problem solving through visual communication.</p>
     <p>
